--- a/Project1/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1/Project1.vcxproj.filters
@@ -18,5 +18,14 @@
     <ClCompile Include="main.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="menu.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="draw.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="move.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
