--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -143,6 +143,9 @@
     <ClCompile Include="draw.c" />
     <ClCompile Include="move.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="draw.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
